@@ -1,7 +1,7 @@
 ## Interface: 50400
 ## Title: Lib: IGAS
 ## Author: kurapica.igas@gmail.com
-## Version: v55
+## Version: v56
 ## Notes: In-game addon system
 ## URL: http://github.com/kurapica
 ## DefaultState: Enabled
